dev/hazelcast-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hazelcast-managementcenter
spec:
  selector:
    matchLabels:
      app: hazelcast-managementcenter
  template:
    metadata:
      labels:
        app: hazelcast-managementcenter
    spec:
      containers:
      - image: hazelcast/management-center:5.4.1
        name: hazelcast-managementcenter
        resources:
          limits:
            memory: 2048Mi
            cpu: "2"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: hazelcast-managementcenter
  name: hazelcast-managementcenter
spec:
  ports:
  - port: 31100
    protocol: TCP
    targetPort: 8080
  selector:
    app: hazelcast-managementcenter
  type: ClusterIP
