dev/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-server
  sessionAffinity: None
  type: LoadBalancer
